add service in api_gateway, update ApplicationRepository in MC deal
