# api_gateway/src/main/resources/openapi.yaml
@@ -131,9 +131,9 @@ paths:
   /api/deal/document/{applicationId}/sign:
     post:
       tags:
-        - SingDocuments
-      description: Sing documents
-      operationId: SingDocuments
+        - SignDocuments
+      description: Sign documents
+      operationId: SignDocuments
       parameters:
         - name: applicationId
           in: path
@@ -143,7 +143,7 @@ paths:
             format: int64
       responses:
         '200':
-          description: Sing successfully
+          description: Sign successfully
 
   /api/deal/document/{applicationId}/code:
     post:
